# blender-mcp-server

./: .gitignore  README.md  pyproject.toml  todo.md
.github/workflows/: publish-pypi.yml
addon/: __init__.py
docs/: architecture.md
scripts/: blender_bridge_request.py  blender_create_test_cube.py  blender_scene_info.py  launch_blender_gui.py
scripts/demos/: README.md  dam_break_scene.py  run_dam_break.py
src/blender_mcp_server/: __init__.py  server.py
tests/: test_addon.py  test_server.py
