[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-mcp-server"
version = "0.1.0"
description = "MCP server for controlling Blender via AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/blender_mcp_server"]

[project.scripts]
blender-mcp-server = "blender_mcp_server:main"
