[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-mcp-server"
version = "0.1.0"
description = "MCP server for controlling Blender via AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/blender_mcp_server"]

[project.scripts]
blender-mcp-server = "blender_mcp_server:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
