[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-mcp-server"
version = "0.1.0"
description = "MCP server for controlling Blender via AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Adam Djellouli", email = "adam@djellouli.com" },
]
keywords = ["blender", "mcp", "model-context-protocol", "ai", "claude", "3d"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/djeada/blender-mcp-server"
Repository = "https://github.com/djeada/blender-mcp-server"
Issues = "https://github.com/djeada/blender-mcp-server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/blender_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "addon/",
    "docs/",
    "tests/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[project.scripts]
blender-mcp-server = "blender_mcp_server:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
